--- a/src/index.template.html
+++ b/src/index.template.html
@@ -37,6 +37,8 @@
       href="icons/favicon-16x16.png"
     />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+
+    <script src="http://localhost:8098"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
